# OpenGL-Thing

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
res/: arvoretop.csv  box.csv  box_no_normals.csv  casinhatop.csv  chao.csv  chao_no_normals.csv
shaders/: phong.frag  phong.vert
src/: camera.cpp  camera.hpp  csv-model.cpp  csv-model.hpp  main.cpp  settings.cpp  settings.hpp  settings.json  shader.cpp  shader.hpp  texture.cpp  texture.hpp
